Table user {
  id BIGINT [PK, INCREMENT]
  username VARCHAR(50) [NOT NULL, UNIQUE]
  password VARCHAR(255) [NOT NULL]
  name VARCHAR(100) [NOT NULL]
  role VARCHAR(20) [DEFAULT: 'USER']
  is_deleted BOOLEAN [DEFAULT: FALSE]
  created_date TIMESTAMP
  created_by VARCHAR(50)
  modified_date TIMESTAMP
  modified_by VARCHAR(50)
}

Table board {
  id BIGINT [PK, INCREMENT]
  name VARCHAR(100) [NOT NULL, UNIQUE]
  description VARCHAR(500)
  is_deleted BOOLEAN [DEFAULT: FALSE]
  created_date TIMESTAMP
  created_by VARCHAR(50)
  modified_date TIMESTAMP
  modified_by VARCHAR(50)
}

Table post {
  id BIGINT [PK, INCREMENT]
  board_id BIGINT [ref: > board.id]
  title VARCHAR(255) [NOT NULL]
  content TEXT
  is_deleted BOOLEAN [DEFAULT: FALSE]
  created_date TIMESTAMP
  created_by VARCHAR(50)
  modified_date TIMESTAMP
  modified_by VARCHAR(50)
}

Table attachment {
    id BIGINT [PK, INCREMENT]
    post_id BIGINT [ref: > post.id]
    original_name VARCHAR(255) [NOT NULL]
    stored_name VARCHAR(255) [NOT NULL]
    file_path VARCHAR(500) [NOT NULL]
    file_size BIGINT
    content_type VARCHAR(100)
    is_deleted BOOLEAN [DEFAULT: FALSE]
    created_date TIMESTAMP
    created_by VARCHAR(50)
    modified_date TIMESTAMP
    modified_by VARCHAR(50)
}
